Avoid overlapping notifications on volume control

--- a/packages/delir/views/NavigationView/style.styl
+++ b/packages/delir/views/NavigationView/style.styl
@@ -9,8 +9,9 @@
 
 .titleBar
     display none
+    box-sizing border-box
     width 100%
-    height 21px
+    height 24px
     padding 4px 8px
 
     justify-content center
