--- a/packages/delir/views/Notifications/style.styl
+++ b/packages/delir/views/Notifications/style.styl
@@ -3,7 +3,7 @@
 
 .root
     position fixed
-    top 16px
+    top 64px
     right 16px
     z-index $z-index-notifications
 
